[tool.poetry]
name = "datalake"
version = "2.2.1"
description = "A collection of scripts to easily use the API of OCD Datalake"
authors = ["OCD <cert-contact.ocd@orange.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
responses = "^0.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
